<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="24dp"
    android:gravity="center"
    android:background="@android:color/white">

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/flipkart"
        android:contentDescription="@string/app_logo"
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="16dp" />

    <EditText
        android:id="@+id/etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:hint="@string/username"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="@android:color/transparent"
        android:inputType="text"
        android:textColor="@android:color/black"
        android:textColorHint="#999999"
        android:autofillHints="" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:hint="@string/password"
        android:textSize="18sp"
        android:padding="12dp"
        android:background="@android:color/transparent"
        android:inputType="textPassword"
        android:textColor="@android:color/black"
        android:textColorHint="#999999"
        android:autofillHints="" />

    <TextView
        android:id="@+id/tvForgotPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Forgot Password?"
        android:textSize="14sp"
        android:textColor="#006400"
    android:layout_gravity="end"
    android:layout_marginBottom="16dp"
    android:onClick="onForgotPasswordClick" />

    <Button
        android:id="@+id/btnLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Login"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="#3F51B5"
    android:padding="12dp"
    android:elevation="4dp"
    android:onClick="onLoginClick" />
    <!-- Add this button inside the existing LinearLayout -->
    <Button
        android:id="@+id/btnRegister"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Register"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/white"
        android:background="#FF5722"
        android:padding="12dp"
        android:elevation="4dp"
        android:layout_marginTop="16dp"
        android:onClick="@registration_page" />


</LinearLayout>
